ETHAN paper accepted to SemEval2020
Unfinished June 9 version before ETHAN publication

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -27,7 +27,7 @@
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/test.csv /content"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -42,7 +42,7 @@
         "\n",
         "\n",
         "prefix = '/content/'\n",
-        "test_df = pd.read_csv(prefix + 'test.csv', header=None) # re-name test.csv \n",
+        "test_df = pd.read_csv(prefix + 'train.csv', header=None) # re-name test.csv \n",
         "test_df=test_df.drop(index=0)\n",
         "\n",
         "test_df = pd.DataFrame({\n",
@@ -53,7 +53,7 @@
         "# display \n",
         "test_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,14 +64,15 @@
         "colab": {}
       },
       "source": [
-        "!pip install allennlp\n",
+        "!pip install allennlp==1.0.0 allennlp-models==1.0.0\n",
+        "\n",
         "!pip install nltk\n",
         "!pip install tqdm\n",
         "\n",
         "!pip install -U spacy \n",
         "!python -m spacy download en_core_web_sm"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,9 +84,10 @@
       },
       "source": [
         "from allennlp.predictors.predictor import Predictor\n",
-        "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/elmo-constituency-parser-2018.03.14.tar.gz\")"
+        "import allennlp_models.structured_prediction\n",
+        "predictor = Predictor.from_path(\"https://storage.googleapis.com/allennlp-public-models/elmo-constituency-parser-2020.02.10.tar.gz\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,53 +152,38 @@
         "          for item in obj:\n",
         "            if isinstance(item, dict):\n",
         "              #print(item['word'])\n",
-        "              if ('would'==item['word'].lower() or 'could'==item['word'].lower() or\n",
+        "              if (\n",
+        "                  'ought'==item['word'].lower() or 'wouldn'==item['word'].lower() or\n",
+        "                  'would'==item['word'].lower() or 'could'==item['word'].lower() or\n",
         "                  'wouldn\\'t'==item['word'].lower() or 'could\\'t'==item['word'].lower() or\n",
         "                  'woulnd\\'t'==item['word'].lower() or 'coulnd\\'t'==item['word'].lower() or\n",
         "                  'might'==item['word'].lower() or 'should'==item['word'].lower() or\n",
         "                  'mightn\\'t'==item['word'].lower() or 'shouldn\\'t'==item['word'].lower() or\n",
         "                  'mighn\\'t'==item['word'].lower() or 'shoulnd\\'t'==item['word'].lower() or\n",
-        "                  'd'==item['word'].lower() or item['word'].lower().strip().endswith('\\'d') or\n",
-        "                  item['word'].lower().lstrip().startswith('as if ') or\n",
-        "                  item['word'].lower().lstrip().startswith('as though ')\n",
+        "                  'd'==item['word'].lower() or item['word'].lower().strip().endswith('\\'d') \n",
         "              ):\n",
         "                phrase = scrap_from(obj, item)\n",
         "                modals.append({'word':item['word'],'text':phrase}) # phrase starting from item\n",
         "\n",
         "              if 'CC' in arr: \n",
         "                arr.remove('CC')   \n",
-        "                if ( 'but' == prev['word'].lower() or\n",
-        "                  'because' == prev['word'].lower() or\n",
-        "                  'although' == prev['word'].lower()\n",
+        "                if (\n",
+        "                    #'and' == prev['word'].lower() or \n",
+        "                    'but' == prev['word'].lower() or # not to devide a full clause\n",
+        "                    #'because' == prev['word'].lower() or\n",
+        "                    'although' == prev['word'].lower()\n",
         "                ):\n",
-        "                  phrase = scrap_from(obj, item)\n",
-        "                  modals.append({'word':item['word'],'text':phrase}) # phrase starting from item\n",
-        "\n",
-        "              if 'MD' in arr: \n",
-        "                arr.remove('MD')\n",
-        "                for h in obj: # head word\n",
-        "                  if h['word'].lower().strip()=='\\'d':\n",
-        "                     modals.append({'word':h['word'],'text':obj})\n",
-        "                  if h['word'].lower().lstrip().startswith('would'):\n",
-        "                     modals.append({'word':h['word'],'text':obj})\n",
-        "                  if h['word'].lower().lstrip().startswith('could'):\n",
-        "                     modals.append({'word':h['word'],'text':obj})\n",
-        "                  if h['word'].lower().lstrip().startswith('should'):\n",
-        "                     modals.append({'word':h['word'],'text':obj})\n",
-        "                  if h['word'].lower().lstrip().startswith('may'):\n",
-        "                     modals.append({'word':h['word'],'text':obj})   \n",
-        "                  if h['word'].lower().lstrip().startswith('might'):\n",
-        "                     modals.append({'word':h['word'],'text':obj}) \n",
-        "                  if h['word'].lower().lstrip().startswith('ought'):\n",
-        "                     modals.append({'word':h['word'],'text':obj})    \n",
+        "                  phrase = prev['word']+ ' '+scrap_from(obj, item)\n",
+        "                  pasts.append({'word':item['word'],'text':phrase})\n",
+        "    \n",
         "\n",
         "              if 'VBP' in arr: # common misspelling of modals\n",
         "                arr.remove('VBP')\n",
-        "                if prev['word'].lower().lstrip().startswith('wouln'):\n",
+        "                if prev['word'].lower().lstrip().startswith('wouln'): \n",
         "                    modals.append({'word':prev['word'],'text':obj})\n",
         "                if prev['word'].lower().lstrip().startswith('couln'):\n",
         "                    modals.append({'word':prev['word'],'text':obj})\n",
-        "                if prev['word'].lower().lstrip().startswith('shouln'): # \n",
+        "                if prev['word'].lower().lstrip().startswith('shouln'): \n",
         "                    modals.append({'word':prev['word'],'text':obj})\n",
         "                if prev['word'].lower().lstrip().startswith('mighn'):\n",
         "                    modals.append({'word':prev['word'],'text':obj}) \n",
@@ -242,13 +229,14 @@
         "                     \n",
         "              if 'IN' in arr: \n",
         "                arr.remove('IN') \n",
-        "                if ('in' == prev['word'].lower() or\n",
+        "                if (#'in' == prev['word'].lower() or\n",
         "                    'if' == prev['word'].lower() or\n",
+        "                    'then' == prev['word'].lower() or\n",
         "                    'with' == prev['word'].lower() or\n",
         "                    'without'== prev['word'].lower() or\n",
         "                    'unless'== prev['word'].lower()\n",
         "                ):    \n",
-        "                  phrase = scrap_from(obj, item)\n",
+        "                  phrase = prev['word']+ ' '+scrap_from(obj, item)\n",
         "                  pasts.append({'word':item['word'],'text':phrase})     \n",
         "                \n",
         "              #arr.append(item) # uncomment for the full set\n",
@@ -258,11 +246,11 @@
         "              prev = item\n",
         "        return arr\n",
         "\n",
-        "    results = extract(obj, arr)\n",
+        "    extract(obj, arr)\n",
         "\n",
         "    return modals, pasts, nouns, verbs"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +288,7 @@
         "  #print(word)    \n",
         "  return word"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +322,7 @@
         "    results = separate(obj, arr)\n",
         "    return results"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +342,7 @@
         "          if (key == 'children'):\n",
         "            return extract_modal(value)  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +361,7 @@
         "          past.remove(p2)          \n",
         "  return past         "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,27 +372,27 @@
         "colab": {}
       },
       "source": [
-        "def remove_from(past, modal, last=1):\n",
+        "def remove_from(modal, past, last=1):\n",
         "  pst = past.copy()\n",
         "\n",
         "  for m in sorted(modal,key=len): # in order of longer consequents\n",
         "    for p in reversed(sorted(past,key=len)): # shorter antecedents\n",
-        "      if p.rstrip() in m and len(m) > len(p): # p is substring of m\n",
-        "        if p in past and len(past) > last: \n",
+        "      if p.rstrip() in m and len(m) >=len(p): # p is substring of m\n",
+        "        if p in past and len(past) > last: # can't be left empty !!\n",
         "          past.remove(p)\n",
-        "      elif m.rstrip() in p and len(p) > len(m):# m is substring of p\n",
-        "        if m in modal and len(modal) > last: # can't be left empty!\n",
+        "      if m.rstrip() in p and len(p)>=len(m):# m is substring of p\n",
+        "        if m in modal:# and len(modal)>last: \n",
         "          modal.remove(m) \n",
         "\n",
-        "  for p in pst: # fresh copy\n",
-        "    for m in modal:\n",
-        "      if m.rstrip() in p: # both p = m or p > m\n",
-        "        if p in past and len(past) > last:\n",
+        "  for p in reversed(sorted(pst,key=len)): # fresh copy of past\n",
+        "    for m in sorted(modal,key=len):\n",
+        "      if m.rstrip() in p and len(p)>=len(m):\n",
+        "        if p in past and len(past) > last: # can't be left empty!\n",
         "          past.remove(p) # remove p{ m }\n",
         "\n",
-        "  return past, modal         "
+        "  return modal, past         "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +413,7 @@
         "      #print('|{...}'+md)  \n",
         "  return md        "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,7 +474,7 @@
         "  #print(phrase,':',result)  \n",
         "  return result"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -504,7 +492,7 @@
         "  result = re.sub(regex, '\\''+r'\\1'+'\\'' , fragment)\n",
         "  return result"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +543,7 @@
         "  r = r.rstrip()\n",
         "  return r"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +603,7 @@
         "\n",
         "  return result       "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +639,7 @@
         "\n",
         "  return fragment"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -713,7 +701,7 @@
         "  #print(start, prev, end, text)  \n",
         "  return text, start, end  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -728,7 +716,7 @@
         "  base=[(i, c) for i, c in enumerate(original)]\n",
         "  return base"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +736,33 @@
         "      i = i + 1\n",
         "  return removed"
       ],
-      "execution_count": 0,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZeVisyM8bjig",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def separate(md, modal, pa, past):\n",
+        "  new = separate_from(md, pa)\n",
+        "  if new != md and len(new) > 0:\n",
+        "    if md in modal: # remove original\n",
+        "      modal.remove(md) \n",
+        "    md = new\n",
+        "\n",
+        "  new = separate_from(pa, md)\n",
+        "  if new != pa and len(new) > 0:\n",
+        "    if pa in past: # remove original\n",
+        "      past.remove(pa) \n",
+        "    pa = new \n",
+        "\n",
+        "  return md, pa    "
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,31 +811,31 @@
         "    if len(md)==0:\n",
         "      continue\n",
         "    #print('=======================')  \n",
-        "    #print(md)\n",
+        "    #print('md: '+md)\n",
         "    \n",
         "    for nm in reversed(sorted(nouns,key=len)):  \n",
         "      if nm in md:   \n",
         "        nounm.append(nm)\n",
         "        nouns.remove(nm)\n",
         "\n",
-        "    for p in reversed(sorted(pas,key=len)):\n",
+        "    for p in sorted(pas,key=len):\n",
         "      pa = simplify(p)\n",
         "      if len(pa)==0:\n",
         "        continue\n",
         "      #print('-----------------------')\n",
-        "      #print(pa)\n",
+        "      #print('pa: ',pa)\n",
         "\n",
         "      # consider join first, but how?\n",
         "      new = separate_from(md, pa)\n",
         "      if new != md and len(new) > 0:\n",
         "        if md in modal: # remove original\n",
-        "            modal.remove(md) \n",
-        "        md = new \n",
+        "          modal.remove(md) \n",
+        "        md = new\n",
         "\n",
         "      new = separate_from(pa, md)\n",
         "      if new != pa and len(new) > 0:\n",
         "        if pa in past: # remove original\n",
-        "            past.remove(pa) \n",
+        "          past.remove(pa) \n",
         "        pa = new \n",
         "\n",
         "      # separate NPs originating with past tense      \n",
@@ -841,44 +855,37 @@
         "\n",
         "    if md not in modal and len(md) > 0:        \n",
         "      modal.append(md)\n",
-        "      \n",
-        "  result = remove_from(modal, past)\n",
-        "  modal = result[0]\n",
-        "  past = result[1]\n",
-        " \n",
-        "  # follwoing does not affect modal, past\n",
-        "  nounm = remove_from(nounm, modal,1)[0]\n",
+        "  \n",
         "  nounm = remove_from(nounm, verbs,0)[0]\n",
         "  nounp = remove_from(nounp, past, 0)[0]\n",
         "  nounp = remove_from(nounp, verbs,0)[0]\n",
-        "\n",
         "  # only after nouns are removed above\n",
         "  modal = remove_from(modal, nounm)[0]\n",
         "  past = remove_from(past, nounp)[0]\n",
-        "\n",
+        " \n",
         "  verbs = deduplicate(verbs)\n",
-        "  nounm = deduplicate(nounm)\n",
-        "  nounp = deduplicate(nounp)\n",
-        "  modal = deduplicate(modal)\n",
+        "  #nounm = deduplicate(nounm)\n",
+        "  #nounp = deduplicate(nounp)\n",
+        "  #modal = deduplicate(modal)\n",
         "  #past = deduplicate(past)\n",
         "\n",
         "  # get start, end positions \n",
         "  modals = defragment(modal, text, original, removed)\n",
-        "  #if len(modals)==0:\n",
+        "  #if len(modals)==0: # rules: consequent can be empty\n",
         "  #  modals = defragment(verbs, text, original, removed)\n",
         "\n",
         "  pasts = defragment(past, text, original, removed)\n",
-        "  if len(pasts)==0:\n",
-        "    if len(modals) > 1:\n",
-        "      pasts.append(modals.pop(0))\n",
+        "  if len(pasts)==0: # rules:antecedent can't be empty\n",
+        "    if len(modals) > 0:\n",
+        "      pasts.append(modals.pop(0)) # why 0? can be any!\n",
         "      if len(modals) == 1:\n",
         "         modals[0].update(labels=1) # gold  \n",
-        "    else:  \n",
-        "      pasts = defragment(nouns, text, original, removed)\n",
+        "    #else:  \n",
+        "    #  pasts = defragment(nouns, text, original, removed)\n",
         "\n",
         "  return modals, pasts, verbs, nouns, nounm, nounp"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -893,7 +900,7 @@
         "nltk.download('punkt')\n",
         "\n",
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = \"Reading between the lines: Judge Stearns used some choice descriptions for the Cape Wind opponents, calling Cape Wind's opponent's obdurate and saying that while they typically claim the mantle of environmentalism, the opponents in this case have doffed their green garb and draped themselves in the banner of free-market economics. One part of the complaint, Stearns said, referenced documents that contradict on their face a supposed fact as plead to make an argument that is misleading and ultimately untrue. In a footnote, Stearns also wrote that were he an economist or a conservationist instead of a judge, he may have rejected Cape Wind, but that elected officials, regulators and the courts have reviewed and approved the project.\"    \n",
+        "  original = \"When I ask Robertson if any of the tests offered by Theranos could have saved Holmes's uncle, he takes a long pause.\"\n",
         ")\n",
         "\n",
         "print(nouns)\n",
@@ -903,7 +910,7 @@
         "print(pasts)\n",
         "print(modals)     "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,6 +918,7 @@
       "metadata": {
         "id": "XRv9sHtMZQSE",
         "colab_type": "code",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -923,7 +931,7 @@
         "from time import sleep\n",
         "\n",
         "prefix = '/content/'\n",
-        "test_df = pd.read_csv(prefix + 'test.csv', header=None) # re-name test.csv \n",
+        "test_df = pd.read_csv(prefix + 'train.csv', header=None) # re-name test.csv \n",
         "test_df = test_df.drop(index=0)\n",
         "  \n",
         "test_df = pd.DataFrame({\n",
@@ -1008,7 +1016,7 @@
         "\n",
         "simple_df.head(100)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1024,7 +1032,7 @@
         "simple_df.to_csv(prefix+'simplified.tsv', sep='\\t', index=False, header=False)\n",
         "simple_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1039,7 +1047,7 @@
         "!mv /content/consequents.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/\n",
         "!mv /content/simplified.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
