--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -34,7 +34,7 @@
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/outputs.antecedents/submit_results.csv /content/antecedent_results.csv\n",
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/outputs.consequents/submit_results.csv /content/consequent_results.csv"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "# display \n",
         "test_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "\n",
         "a_df.head(30)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,9 +124,9 @@
         "colab": {}
       },
       "source": [
-        "pip install allennlp==1.0.0rc4 allennlp-models==1.0.0rc4"
+        "pip install allennlp==1.0.0 allennlp-models==1.0.0"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       },
       "source": [
         "from allennlp.predictors.predictor import Predictor\n",
-        "import allennlp_models.syntax.biaffine_dependency_parser\n",
+        "import allennlp_models.structured_prediction\n",
         "predictor = Predictor.from_path(\"https://storage.googleapis.com/allennlp-public-models/biaffine-dependency-parser-ptb-2020.04.06.tar.gz\")\n",
         "\n",
         "original = \"When they tested a strategy that sold stocks and went into cash every time price-to-dividend multiples went clearly above their historic mean at the time, and re-entered when they had become cheap, in 20 different countries, they found that in all of them it would have been better simply to buy and hold stocks.\"    \n",
@@ -147,7 +147,7 @@
         ")\n",
         "prediction"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         " root.update({'text': text})\n",
         " return extract_children(root) "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "  text = extract(obj, arr)\n",
         "  return text, spans, deps, verbs"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
         "def position(span):\n",
         "  return span[0]['start']"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
         "  results = follow(obj, arr)\n",
         "  return results"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
         "  result = re.sub(regex, '\\''+r'\\1'+'\\'' , fragment)\n",
         "  return result"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
         "  r = r.rstrip()\n",
         "  return r"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +431,7 @@
         "\n",
         "    return deps, loops       "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "    print('no verbs!')\n",
         "    return adeps, cdeps, aloops, cloops\n",
         "\n",
-        "  for verb in verbs: # any 'VERB' or \"AUX\" (Why ?)\n",
+        "  for verb in verbs: # any 'VERB' or \"AUX\" or \"NOUN\", because those are typicaly at root\n",
         "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj','cc advcl')\n",
         "    adeps.update(deps)\n",
         "    aloops.update(loops)\n",
@@ -465,7 +465,7 @@
         "\n",
         "  return adeps, cdeps, aloops, cloops   "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -488,7 +488,7 @@
         "      #print('|{...}'+md)  \n",
         "  return md, index       "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +590,7 @@
         "  print('v')\n",
         "  return amid, alab, atext, astart, aend, 25 # unpredicted"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,21 +602,21 @@
         "colab": {}
       },
       "source": [
-        "original = \"If that was my daughter, I would have asked If I did something wrong.\"    \n",
+        "original = \"In the past, I should have tried to talk him out of it as though my life had depended on it.\"    \n",
         "\n",
         "prediction = predictor.predict(sentence = original)\n",
         "sentence, spans, deps, verbs = extract_dependents(prediction)\n",
         "\n",
         "verbs = follow_children(verbs) # flatten the tree\n",
-        "antecedent = \"If that was my daughter\"\n",
-        "consequent = \"would have asked If I did something wrong\"\n",
+        "antecedent = \"had depended on it\"\n",
+        "consequent = \"should have tried to talk him out of it as though my life\"\n",
         "\n",
         "sentence = normalize(sentence)\n",
         "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence)\n",
         "print(adeps,cdeps)\n",
         "print(aloops,cloops)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +744,7 @@
         "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','cstart','cend','gold_consequent','gold_antecedent','antecedent','alabel','aprob','astart','aend'])\n",
         "print('Falied =',count)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -759,7 +759,7 @@
         "!mv /content/submission_task2.zip /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/\n",
         "!mv /content/report.csv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
