Published SemEval2020 Task 5 submission

--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -54,7 +54,7 @@
         "\n",
         "test_df = pd.DataFrame({\n",
         "    'id':test_df[0],\n",
-        "    'text': test_df[1], # comment out following for test.csv\n",
+        "    'text': test_df[1], # remove following for test.csv\n",
         "    'antecedent': test_df[2],\n",
         "    'consequent': test_df[3],\n",
         "    'astart':test_df[4],\n",
@@ -522,7 +522,7 @@
         "    text = atext\n",
         "    #print(amid,'candidate ='+atext)\n",
         "    if alab == 1:\n",
-        "      print('v' , atext)\n",
+        "      print('V' , atext)\n",
         "      return amid, alab, atext, astart, aend, 100 # positive!\n",
         "\n",
         "    # If rules gave no certain \"yes\"(==1 above)\n",
@@ -573,7 +573,7 @@
         "                continue    \n",
         "              return amid, alab, atext, astart, aend, '-75' # should be impossible\n",
         "\n",
-        "            if len(adeps) > 0 and len(cdeps) > 0: # relaxed for correction\n",
+        "            if len(adeps) > 0 and len(cdeps) > 0: # relaxed for possible correction\n",
         "              if first and len(arule.index) > count:\n",
         "                print('x',count)\n",
         "                continue\n",
@@ -584,7 +584,7 @@
         "                atext = ctext + ' ' + atext\n",
         "              aend = aend + 1 + len(ctext) # plus 1 space \n",
         "              print('+' , atext)   \n",
-        "              return amid, alab, atext, astart, aend,'-50' # certainly-not\n",
+        "              return amid, alab, atext, astart, aend,'-50' # most likely - not\n",
         "            print('v')              \n",
         "            return amid, alab, atext, astart, aend, 50 # uncertain     \n",
         "  print('v')\n",
@@ -602,14 +602,14 @@
         "colab": {}
       },
       "source": [
-        "original = \"In the past, I should have tried to talk him out of it as though my life had depended on it.\"    \n",
+        "original = \"As for me, I personally was able to consume more by living in East Asia than I would have if I lived in America.\"    \n",
         "\n",
         "prediction = predictor.predict(sentence = original)\n",
         "sentence, spans, deps, verbs = extract_dependents(prediction)\n",
         "\n",
         "verbs = follow_children(verbs) # flatten the tree\n",
-        "antecedent = \"had depended on it\"\n",
-        "consequent = \"should have tried to talk him out of it as though my life\"\n",
+        "antecedent = \"was able to consume more by living in East Asia than I would have if I lived in America\"\n",
+        "consequent = \"I would have if I lived in America\"\n",
         "\n",
         "sentence = normalize(sentence)\n",
         "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence)\n",
@@ -636,7 +636,7 @@
         "from time import sleep\n",
         "\n",
         "submit_df = pd.DataFrame(columns=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid'])\n",
-        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','cdep','consequent','cstart','cend','gold_consequent','gold_antecedent','antecedent', 'alabel','aprob','astart','aend'])\n",
+        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','cdep','consequent','gold_consequent','cstart','cend','gold_antecedent','antecedent', 'alabel','aprob','astart','aend'])\n",
         "\n",
         "count = 0\n",
         "for ind in tqdm(test_df.index): \n",
@@ -682,20 +682,27 @@
         "    cstart=-1\n",
         "    cend = -1\n",
         "    cdep = '='\n",
-        "  if len(verbs) > 0 and len(consequent) > 0 and not consequent in antecedent:\n",
+        "  if len(verbs) > 0 and len(consequent) > 0:\n",
         "    adeps,cdeps,aloops,cloops = track(verbs, antecedent, consequent, sentence)\n",
-        "\n",
-        "    if len(adeps) > 0 and len(cdeps) > 0 and len(aloops) > 0 and len(cloops)>0:\n",
-        "      antecedent = consequent\n",
-        "      astart=cstart\n",
-        "      aend = cend\n",
-        "      aprob= cprob\n",
-        "      consequent = ''\n",
-        "      cstart=-1\n",
-        "      cend = -1\n",
-        "      cdep = '>'\n",
-        "    elif len(adeps)>0 and len(cdeps)>0:\n",
-        "      cdep = '?'  \n",
+        "    if consequent in antecedent:\n",
+        "      if len(adeps) > 0 and len(cdeps) > 0 and len(aloops) > 0 and len(cloops)>0:\n",
+        "        consequent = ''\n",
+        "        cstart=-1\n",
+        "        cend = -1\n",
+        "        cdep = '-'\n",
+        "    else:  \n",
+        "      if len(adeps) > 0 and len(cdeps) > 0 and len(aloops) > 0 and len(cloops)>0:\n",
+        "        antecedent = consequent\n",
+        "        astart=cstart\n",
+        "        aend = cend\n",
+        "        aprob= cprob\n",
+        "        consequent = ''\n",
+        "        cstart=-1\n",
+        "        cend = -1\n",
+        "        cdep = '>'\n",
+        "      elif len(adeps)>0 and len(cdeps)>0:\n",
+        "        cdep = '?'\n",
+        "  \n",
         "\n",
         "  if len(antecedent) > 0:       \n",
         "    if len(consequent) > 0:\n",
@@ -714,10 +721,10 @@
         "    'clabel': clab,\n",
         "    'cprob': cprob,\n",
         "    'cdep' : cdep,\n",
-        "    'consequent': consequent, # comment out gold_,\n",
+        "    'consequent': consequent, # comment out gold_\n",
+        "    'gold_consequent': test_df['consequent'][ind],\n",
         "    'cstart': cstart,\n",
         "    'cend': cend,\n",
-        "    'gold_consequent': test_df['consequent'][ind],\n",
         "    'gold_antecedent': test_df['antecedent'][ind],\n",
         "    'antecedent': antecedent, \n",
         "    'alabel': alab,\n",
@@ -741,7 +748,7 @@
         "  sleep(1)\n",
         "\n",
         "submit_df.to_csv(prefix+'subtask2.csv',index=False, header=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid']) \n",
-        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','cstart','cend','gold_consequent','gold_antecedent','antecedent','alabel','aprob','astart','aend'])\n",
+        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','gold_consequent','cstart','cend','gold_antecedent','antecedent','alabel','aprob','astart','aend'])\n",
         "print('Falied =',count)"
       ],
       "execution_count": null,
